--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ target_compile_options(lightThermo PRIVATE -Wall)
 target_link_libraries(lightThermo 
         hardware_i2c
         hardware_pio
+        hardware_gpio
         hardware_uart
         )
 
